<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity3">

    <TextView
        android:id="@+id/typead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Type d'adhésion"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

    <RadioGroup
        android:id="@+id/type"
        android:layout_width="326dp"
        android:layout_height="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26">


        <RadioButton
            android:id="@+id/ind"
            android:buttonTint="@color/red"
            android:layout_width="144dp"
            android:layout_height="24dp"
            android:text="@string/ind"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/societe"
            app:layout_constraintVertical_bias="0.665" />

        <RadioButton
            android:id="@+id/fam"
            android:layout_width="142dp"
            android:layout_height="24dp"
            android:buttonTint="@color/red"
            android:text="@string/fam"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/langue"
            app:layout_constraintVertical_bias="0.087" />
    </RadioGroup>

    <TextView
        android:id="@+id/preference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Préférence de siège"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/pref"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />

    <RadioGroup
        android:id="@+id/pref"
        android:layout_width="412dp"
        android:layout_height="29dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545">


        <RadioButton
            android:id="@+id/hub"
            android:layout_width="135dp"
            android:layout_height="36dp"
            android:text="Côté hublot"
            android:buttonTint="@color/red"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/societe"
            app:layout_constraintVertical_bias="0.665" />

        <RadioButton
            android:id="@+id/couloir"
            android:layout_width="142dp"
            android:layout_height="24dp"
            android:buttonTint="@color/red"
            android:text="Côté couloir"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/langue"
            app:layout_constraintVertical_bias="0.087" />

        <RadioButton
            android:id="@+id/indif"
            android:layout_width="142dp"
            android:layout_height="24dp"
            android:buttonTint="@color/red"
            android:text="Indifférent"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/langue"
            app:layout_constraintVertical_bias="0.087" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mode de paiement"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/payment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969" />

    <RadioGroup
        android:id="@+id/payment"
        android:layout_width="419dp"
        android:layout_height="33dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445">


        <RadioButton
            android:id="@+id/cc"
            android:layout_width="142dp"
            android:layout_height="24dp"
            android:buttonTint="@color/red"
            android:text="@string/carte_de_cr_dit"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/societe"
            app:layout_constraintVertical_bias="0.665" />

        <RadioButton
            android:id="@+id/cash"
            android:layout_width="142dp"
            android:layout_height="24dp"
            android:buttonTint="@color/red"
            android:text="Cash"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/langue"
            app:layout_constraintVertical_bias="0.087" />

        <RadioButton
            android:id="@+id/cheque"
            android:layout_width="142dp"
            android:layout_height="24dp"
            android:buttonTint="@color/red"
            android:text="Chèque"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/langue"
            app:layout_constraintVertical_bias="0.087" />

    </RadioGroup>

    <TextView
        android:id="@+id/classeha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Classe habituelle de voyage"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/classh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.979" />

    <RadioGroup
        android:id="@+id/classh"
        android:layout_width="336dp"
        android:layout_height="26dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.693"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639">


        <RadioButton
            android:id="@+id/business"
            android:layout_width="142dp"
            android:layout_height="24dp"
            android:text="Business"
            android:buttonTint="@color/red"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/societe"
            app:layout_constraintVertical_bias="0.665" />

        <RadioButton
            android:id="@+id/economique"
            android:layout_width="142dp"
            android:layout_height="24dp"
            android:text="Economique"
            android:textColor="@color/black"
            android:buttonTint="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/langue"
            app:layout_constraintVertical_bias="0.087" />

    </RadioGroup>


    <TextView
        android:id="@+id/habits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vos habitudes de voyage"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683" />

    <RadioGroup
        android:id="@+id/habitude"
        android:layout_width="330dp"
        android:layout_height="33dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74">


        <RadioButton
            android:id="@+id/seul"
            android:layout_width="142dp"
            android:layout_height="24dp"
            android:text="Seul"
            android:textColor="@color/black"
            android:buttonTint="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/societe"
            app:layout_constraintVertical_bias="0.665" />

        <RadioButton
            android:id="@+id/accompagne"
            android:layout_width="142dp"
            android:layout_height="24dp"
            android:buttonTint="@color/red"
            android:text="Accompagné"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/langue"
            app:layout_constraintVertical_bias="0.087" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Avez-vous besoin d'une assistance particulière ?"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/assistance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <RadioGroup
        android:id="@+id/assistance"
        android:layout_width="305dp"
        android:layout_height="26dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351">


        <RadioButton
            android:id="@+id/oui"
            android:layout_width="142dp"
            android:layout_height="24dp"
            android:text="Oui"
            android:textColor="@color/black"
            android:buttonTint="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/societe"
            app:layout_constraintVertical_bias="0.665" />

        <RadioButton
            android:id="@+id/non"
            android:layout_width="142dp"
            android:layout_height="24dp"
            android:buttonTint="@color/red"
            android:text="Non"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/langue"
            app:layout_constraintVertical_bias="0.087" />


    </RadioGroup>

    <CheckBox
        android:id="@+id/tos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Accept the terms of use"
        android:buttonTint="@color/red"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Envoyer"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <Button
        android:id="@+id/annuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/Annuler"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.707"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

</androidx.constraintlayout.widget.ConstraintLayout>